--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Benchjs</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.14.1/lodash.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/benchmark/2.1.4/benchmark.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 
 <body>
