--- a/index.html
+++ b/index.html
@@ -3,11 +3,42 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/images/favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
+  <link rel="icon" href="images/favicon.ico" />
+  <link rel="apple-touch-icon" href="images/logo.svg" />
+  <link rel="apple-touch-icon-precomposed" href="images/logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <meta name="description" content="boon4681 Online JavaScript performance benchmark tool / playground.">
+  <meta name="application-name" content="Benchjs">
+  <meta name="keywords" content="boon4681,benchmark,JavaScript,Online" />
+  <meta property="og:title" content="Benchjs - JavaScript benchmark tool" />
+  <meta name="twitter:title" content="Benchjs - JavaScript benchmark tool" />
+  <meta property="og:type" content="website" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta property="og:description" content="Benchjs - JavaScript benchmark tool" />
+  <meta name="twitter:description" content="Benchjs - JavaScript benchmark tool" />
+  <meta property="og:url" content="https://benchjs.boon4681.com/" />
+  <meta name="twitter:url" content="https://benchjs.boon4681.com/" />
+  <meta property="og:image" content="https://benchjs.boon4681.com/images/logo.svg" />
+  <meta name="twitter:image" content="https://benchjs.boon4681.com/images/logo.svg" />
+  <meta property="og:site_name" content="Benchjs" />
+  <meta property="og:locale" content="th_TH" />
+  <meta name="robots" content="index,follow" />
+  <meta name="googlebot" content="index,follow,archive" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
   <title>Benchjs</title>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-CNWQDWBZPB"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { window.dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-CNWQDWBZPB');
+  </script>
 </head>
 
 <body>
