--- a/index.html
+++ b/index.html
@@ -5,24 +5,24 @@
   <meta charset="UTF-8" />
   <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
   <link rel="icon" href="images/favicon.ico" />
-  <link rel="apple-touch-icon" href="images/logo.svg" />
-  <link rel="apple-touch-icon-precomposed" href="images/logo.svg" />
+  <link rel="apple-touch-icon" href="images/logo.jpg" />
+  <link rel="apple-touch-icon-precomposed" href="images/logo.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="boon4681 Online JavaScript performance benchmark tool / playground.">
   <meta name="application-name" content="Benchjs">
   <meta name="keywords" content="boon4681,benchmark,JavaScript,Online" />
   <meta property="og:title" content="Benchjs - JavaScript benchmark tool" />
-  <meta name="twitter:title" content="Benchjs - JavaScript benchmark tool" />
   <meta property="og:type" content="website" />
-  <meta name="twitter:card" content="summary_large_image" />
   <meta property="og:description" content="Benchjs - JavaScript benchmark tool" />
-  <meta name="twitter:description" content="Benchjs - JavaScript benchmark tool" />
   <meta property="og:url" content="https://benchjs.boon4681.com/" />
-  <meta name="twitter:url" content="https://benchjs.boon4681.com/" />
-  <meta property="og:image" content="https://benchjs.boon4681.com/images/logo.svg" />
-  <meta name="twitter:image" content="https://benchjs.boon4681.com/images/logo.svg" />
+  <meta property="og:image" content="https://benchjs.boon4681.com/images/logo.jpg" />
   <meta property="og:site_name" content="Benchjs" />
   <meta property="og:locale" content="th_TH" />
+  <meta name="twitter:title" content="Benchjs - JavaScript benchmark tool" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:description" content="Benchjs - JavaScript benchmark tool" />
+  <meta name="twitter:url" content="https://benchjs.boon4681.com/" />
+  <meta name="twitter:image" content="https://benchjs.boon4681.com/images/logo.jpg" />
   <meta name="robots" content="index,follow" />
   <meta name="googlebot" content="index,follow,archive" />
   <link
