--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="apple-touch-icon" href="images/logo.jpg" />
   <link rel="apple-touch-icon-precomposed" href="images/logo.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="boon4681 Online JavaScript performance benchmark tool / playground.">
+  <meta name="description" content="Benchjs - JavaScript benchmark tool Online JavaScript performance benchmark / playground.">
   <meta name="application-name" content="Benchjs">
   <meta name="keywords" content="boon4681,benchmark,JavaScript,Online" />
   <meta property="og:title" content="Benchjs - JavaScript benchmark tool" />
